# movie_trip_planner_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-local.yaml  docker-compose.yaml  main.py  makefile  nginx.conf  pyproject.toml  setup_hetzner.sh
backend/: agent.py  agent_experiment.py  main.py  requirements.txt
example/: chroma.py
pipeline/: ingestion_airbnb.py  ingestion_airbnb_duckdb.py  scrape_airbnb.py  vector_airbnb.py
shared/: database.py  schema.py
