[project]
name = "movie-trip-planner"
version = "0.1.0"
description = "project for movie trip planner"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "chromadb==1.5.5",
    "pandas==3.0.1",
    "pydantic==2.12.5",
    "pydantic-ai==1.67.0",
    "python-dotenv==1.2.2",
    "clickhouse-connect==0.14.1",
    "fastapi[standard]==0.135.1",
    "duckdb==1.5.0",
]
