[project]
name = "movie-trip-planner"
version = "0.1.0"
description = "project for movie trip planner"
readme = "README.md"
requires-python = ">=3.12.3,<3.14"
dependencies = [
    "chromadb==1.5.5",
    "pandas==2.3.3",
    "pydantic==2.12.5",
    "pydantic-ai==1.77.0",
    "python-dotenv>=1.0.1",
    "clickhouse-connect==0.14.1",
    "fastapi[standard]==0.135.1",
    "duckdb==1.5.0",
    "requests==2.33.0",
    "beautifulsoup4==4.14.3",
    "cloudscraper==1.2.71",
    "sentence-transformers==5.3.0",
    "langfuse>=3.0.0a0",
    "litellm==1.83.2",
    "mlflow==3.10.1"
]

[tool.uv]
prerelease = "allow"
override-dependencies = ["python-dotenv>=1.1.0"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true